# cw-dit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
cwdit-cli/: Cargo.toml
cwdit-cli/src/: main.rs
cwdit-cli/tests/: decode_quality.rs  smoke.rs
cwdit-dsp/: Cargo.toml
cwdit-dsp/src/: bank.rs  channelizer.rs  debounce.rs  envelope.rs  iq_channelizer.rs  lib.rs  runlength.rs  scan.rs  skim.rs  smooth.rs  threshold.rs  track.rs
cwdit-dsp/tests/: channelizer_pipeline.rs  detector.rs  detector_iq.rs  multi_channel.rs  noisy_pipeline.rs  wav_pipeline.rs
cwdit-morse/: Cargo.toml
cwdit-morse/src/: alphabet.rs  bootstrap.rs  decoder.rs  element.rs  lib.rs  timing.rs
cwdit-morse/tests/: end_to_end.rs
cwdit-server/: Cargo.toml
cwdit-server/src/: lib.rs  main.rs  missing_web.html  pipeline.rs  ws.rs
cwdit-server/static/: index.html
cwdit-server/tests/: ws.rs
cwdit-source/: Cargo.toml
cwdit-source/src/: audio.rs  lib.rs  sdr.rs  wav.rs
cwdit-synth/: Cargo.toml
cwdit-synth/src/: lib.rs  main.rs
cwdit-synth/tests/: cli.rs
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/lib/: Channel.svelte  Waterfall.svelte  format.ts  types.ts
web/src/routes/: +layout.ts  +page.svelte
