[package]
name = "cwdit-cli"
description = "Headless command-line decoder for the cw-dit skimmer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "cwdit"

[[bin]]
name = "cwdit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cwdit-dsp = { path = "../cwdit-dsp" }
cwdit-morse = { path = "../cwdit-morse" }
cwdit-source = { path = "../cwdit-source" }

[dev-dependencies]
cwdit-synth = { path = "../cwdit-synth" }

[lints]
workspace = true
