[package]
name = "cwdit-server"
description = "Axum + WebSocket front-end for the cw-dit skimmer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "cwdit-server"

[[bin]]
name = "cwdit-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
cwdit-dsp = { path = "../cwdit-dsp" }
cwdit-morse = { path = "../cwdit-morse" }
cwdit-source = { path = "../cwdit-source" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cwdit-synth = { path = "../cwdit-synth" }
futures-util = "0.3"
tokio-tungstenite = "0.24"

[lints]
workspace = true
