[package]
name = "cwdit-server"
description = "Axum + WebSocket front-end for the cw-dit skimmer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "cwdit-server"

[[bin]]
name = "cwdit-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
cwdit-dsp = { path = "../cwdit-dsp" }
cwdit-morse = { path = "../cwdit-morse" }
cwdit-source = { path = "../cwdit-source" }
# rustfft re-exports num-complex; pulling it in here avoids a separate
# version-pin for the IQ pipeline's Complex32 plumbing (same as cwdit-cli).
rustfft = "6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
# Enable SDR live IQ via SoapySDR. Forwards to the matching feature on
# cwdit-source so the radio bindings only build when actually requested.
soapy = ["cwdit-source/soapy"]

[dev-dependencies]
base64 = "0.22"
cwdit-synth = { path = "../cwdit-synth" }
futures-util = "0.3"
tokio-tungstenite = "0.24"

[lints]
workspace = true
